# bike-doc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT-MAP.md  Taskfile.yml  agents-cli-manifest.yaml  compose.yaml  docker-compose.yml  pyproject.toml
apps/android/: AGENTS.md  (+5 more)
apps/api/: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
apps/api/src/bike_doc_api/: __init__.py  main.py
apps/api/src/bike_doc_api/adk/: __init__.py  artifacts.py  background.py  orchestration.py  runner.py  sessions.py
apps/api/src/bike_doc_api/adk/agents/: __init__.py  diagnostic.py  execution.py  planning.py
apps/api/src/bike_doc_api/adk/prompts/: diagnostic.md  execution.md  planning.md
apps/api/src/bike_doc_api/adk/report_schemas/: __init__.py  diagnostic.py  execution.py  plan.py
apps/api/src/bike_doc_api/adk/tools/: __init__.py  artifacts.py  bike_profile.py  common.py  input_requests.py  price_lookup.py  repair_history.py  repair_reference.py  reports.py  safety.py  tool_catalog.py
apps/api/src/bike_doc_api/api/: deps.py  router.py
apps/api/src/bike_doc_api/api/v1/: __init__.py  artifacts.py  bikes.py  decisions.py  events.py  me.py  repair_sessions.py  reports.py  turns.py
apps/api/src/bike_doc_api/core/: config.py  errors.py  logging.py  security.py
apps/api/src/bike_doc_api/db/: base.py  session.py
apps/api/src/bike_doc_api/db/migrations/: README.md  env.py
apps/api/src/bike_doc_api/db/migrations/versions/: 2026_06_23_0001_0001_create_diagnostic_persistence_schema.py
apps/api/src/bike_doc_api/models/: __init__.py  _ids.py  artifact.py  bike.py  event.py  phase_report.py  price_lookup.py  repair_history.py  repair_reference.py  repair_session.py  tool_catalog.py  user.py
apps/api/src/bike_doc_api/providers/: __init__.py
apps/api/src/bike_doc_api/providers/price/: __init__.py  base.py  stub.py
apps/api/src/bike_doc_api/providers/repair_reference/: __init__.py  base.py  stub.py
apps/api/src/bike_doc_api/providers/storage/: __init__.py  base.py  gcs.py  local.py
apps/api/src/bike_doc_api/repositories/: __init__.py  artifacts.py  bikes.py  events.py  repair_history.py  repair_sessions.py  reports.py  tool_catalog.py  users.py
apps/api/src/bike_doc_api/schemas/: __init__.py  artifact.py  bike.py  common.py  decision.py  event.py  repair_session.py  report.py  turn.py  user.py
apps/api/src/bike_doc_api/services/: artifacts.py  auth.py  bikes.py  decisions.py  events.py  repair_sessions.py  reports.py  safety.py  turns.py
apps/api/src/bike_doc_api_adk_agent/: __init__.py
apps/api/tests/: conftest.py
apps/api/tests/api/: test_artifacts.py  test_auth.py  test_bikes.py  test_events.py  test_repair_sessions.py  test_reports.py  test_turns.py
apps/api/tests/contract/: test_openapi_contract.py
apps/api/tests/unit/: test_auth_service.py  test_config.py  test_main.py  test_storage.py
apps/api/tests/unit/adk/: test_adk_compatibility.py  test_agents_cli_entrypoint.py  test_background.py  test_dependency_wiring.py  test_diagnostic_agent.py  test_orchestration.py  test_runner.py  test_sessions.py
apps/api/tests/unit/adk/tools/: test_artifacts_tool.py  test_bike_profile_tool.py  test_input_requests_tool.py  test_repair_history_tool.py  test_reports_tool.py  test_safety_tool.py  test_tool_catalog.py
apps/api/tests/unit/models/: test_timestamp_metadata.py
apps/api/tests/unit/repositories/: test_diagnostic_persistence.py
apps/api/tests/unit/schemas/: test_diagnostic_schemas.py
apps/api/tests/unit/services/: test_bike_service.py  test_event_service.py  test_repair_session_service.py  test_report_service.py  test_safety_service.py
docs/: initial-plan.md
test-scripts/: auth.sh  create-session.sh  test-diagnostic.sh
(+66 files in other folders)
