[project]
name = "bike-doc-agents-cli"
version = "0.1.0"
description = "Agents CLI workspace shim for the Bike Doc backend ADK integration"
requires-python = ">=3.12"
dependencies = [
  "bike-doc-api",
]

[dependency-groups]
dev = [
  "pytest>=8.4",
  "pytest-asyncio>=1.0",
]

[project.optional-dependencies]
eval = [
  "google-adk[eval]==2.3.0",
  "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
  "codespell>=2.2.0,<3.0.0",
  "ruff>=0.12",
  "ty>=0.0.1a0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api"]

[tool.uv.sources]
bike-doc-api = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
  ".agent",
  ".venv",
  "apps/api/.venv",
]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "N",
  "ASYNC",
  "RUF",
  "T20",
]

[tool.ruff.lint.isort]
known-first-party = ["bike_doc_api", "bike_doc_api_adk_agent"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"apps/api/tests/**/*.py" = ["T201", "S101"]
"apps/api/src/bike_doc_api/db/migrations/**/*.py" = ["N999"]

[tool.codespell]
skip = "./.agent,./.venv,./apps/api/.venv,./apps/api/uv.lock,./uv.lock"
